--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -113,7 +113,7 @@ img                         { border: 0; }
         }
             > #error_overlay_image {
                 @extend .overlay_image;
-                background: $red no-repeat center/55% url("/Images/close.png");
+                background: $red no-repeat center/55% url("/Images/close_white.png");
             }
             > #success_overlay_image {
                 @extend .overlay_image;
@@ -218,5 +218,89 @@ img                         { border: 0; }
         h1 { font-size: 23px; }
         h2 { font-size: 16px; }
         h3 { font-size: 14px; }
+    }
+}
+
+.popUp {
+    position: fixed;
+    width: 100%;
+    height: 0;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 1500;
+
+    > .prompt {
+        float: left;
+        position: relative;
+        display: block;
+        width: 80%;
+        height: auto;
+        padding: 0;
+        background-color: rgba(0,0,0,0.9);
+        max-width: $maxContainerWidth;
+        overflow: hidden;
+        opacity: 0;
+
+        > span {
+            display: block;
+            max-width: 80%;
+            margin-left: 10%;
+            color: $off-white;
+            font: 400 18px $font;
+        }
+
+        > div {
+            position: relative;
+            float: left;
+            display: block;
+            height: auto;
+            width: 60%;
+            margin-left: 20%;
+
+            > button {
+                display: block;
+                position: relative;
+                float: right;
+                clear: none;
+                width: 40%;
+                min-width: 140px !important;
+                margin: 40px 5% 20px 5%;
+                font: 400 18px $font;
+                text-align: right;
+                text-indent: 75px;
+                color: transparent;
+                direction: rtl;
+                background-size: 30px !important;
+                height: 65px;
+            }
+                > button:hover {
+                    background-position-x: calc(100% - 30px) !important;
+                    color: white;
+                    transition: 0.4s, color 0.2s ease 0.4s;
+                }
+        }
+    }
+}
+
+.popUp:not(.yesNo) > .prompt > div > button {
+    background: $green no-repeat center url("/Images/check.png");
+    right: -10% !important;
+    margin-right: 0 !important;
+}
+
+.popUp.yesNo > .prompt > div {
+    > #confirmPrompt { 
+        background: $green no-repeat center url("/Images/check.png");
+    }
+    > #closePrompt { 
+        background: $red no-repeat center url("/Images/close_white.png");
+    }
+}
+
+@media screen and (max-width: 840px) {
+    .prompt { 
+        width: 100% !important; 
+
+        > div { width: 100%; }
+        > span { font-size: 16px !important; }
     }
 }
