changed titles from english to french.

--- a/Gobot/Gobot/Views/Stats/History.cshtml
+++ b/Gobot/Gobot/Views/Stats/History.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Gobot.Models.Match>
 
 @{
-    ViewBag.Title = "History";
+    ViewBag.Title = "Historique";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Bet.min.css")
