--- a/Gobot/Gobot/Views/Stats/Schedule.cshtml
+++ b/Gobot/Gobot/Views/Stats/Schedule.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Gobot.Models.Match>
 
 @{
-    ViewBag.Title = "Schedule";
+    ViewBag.Title = "Horaire";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Bet.min.css")
