--- a/Gobot/Gobot/Views/Support/faq.cshtml
+++ b/Gobot/Gobot/Views/Support/faq.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "faq";
+    ViewBag.Title = "F.A.Q";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Support.min.css")
