Added favicon/Description/Keywords for all pages + Modified handling of popUp + added animation to error messages.

--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Mon compte";
+    ViewBag.Desc = "Information relative à vos activités sur Gobot ainsi que les paramètres de votre compte.";
+    ViewBag.Keywords = "Information, paramètres, compte, activités, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Account.min.css")
