--- a/Gobot/Gobot/Views/Bet/Index.cshtml
+++ b/Gobot/Gobot/Views/Bet/Index.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Gager";
+    ViewBag.Desc = "Miser sur l'équipe de votre choix sur des parties CS:GO à venir.";
+    ViewBag.Keywords = "Mise, Miser, équipe, CS:GO, Counter-Strike:Global Offensive, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Bet.min.css")
