--- a/Gobot/Gobot/Views/Bet/ad.cshtml
+++ b/Gobot/Gobot/Views/Bet/ad.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Regarder une annonce";
+    ViewBag.Desc = "Regarder une annonce afin de recevoir des crédits Gobot.";
+    ViewBag.Keywords = "Annonce, récompenses, crédits, pub, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
