--- a/Gobot/Gobot/Views/Stats/History.cshtml
+++ b/Gobot/Gobot/Views/Stats/History.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Historique";
+    ViewBag.Desc = "Historique des parties CS:GO passées.";
+    ViewBag.Keywords = "Historique, passée, liste parties, CS:GO, Counter-strike: Global offensive, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Bet.min.css")
