--- a/Gobot/Gobot/Views/Stats/Teams.cshtml
+++ b/Gobot/Gobot/Views/Stats/Teams.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Équipes";
+    ViewBag.Desc = "Liste des équipes de bots pouvant jouer des parties sur le serveur Gobot.";
+    ViewBag.Keywords = "Équipes, bots, joueurs, CS:GO, Counter-strike: Global Offensive, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Teams.min.css")
