--- a/Gobot/Gobot/Views/Support/faq.cshtml
+++ b/Gobot/Gobot/Views/Support/faq.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewBag.Title = "F.A.Q";
+    ViewBag.Desc = "Réponses aux questions les plus demandées.";
+    ViewBag.Keywords = "Faq, f.a.q, questions, support, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Support.min.css")
