--- a/Gobot/Gobot/Views/Watch/Index.cshtml
+++ b/Gobot/Gobot/Views/Watch/Index.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Regarder";
+    ViewBag.Desc = "Regarder la partie Counter-strike:Global Offensive en cours.";
+    ViewBag.Keywords = "Regarder, Stream, Twitch, CS:GO, Counter-strike:Global Offensive, bots, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
