--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -75,8 +75,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
-  min-height: 100%;
+  height: 100%;
   background-color: #141414;
   z-index: 9999; }
   #error_overlay > div, #js_error > div {
@@ -255,6 +254,29 @@ img {
         background-position-x: calc(100% - 30px) !important;
         color: white;
         transition: 0.4s, color 0.2s ease 0.4s; }
+    .popUp > .prompt > .lastMatch, .popUp > .prompt .nextMatch {
+      position: relative;
+      float: left;
+      display: block;
+      height: auto;
+      top: 0;
+      left: 0;
+      clear: both;
+      margin: 0 !important; }
+      .popUp > .prompt > .lastMatch h1, .popUp > .prompt > .lastMatch h2, .popUp > .prompt > .lastMatch h3, .popUp > .prompt .nextMatch h1, .popUp > .prompt .nextMatch h2, .popUp > .prompt .nextMatch h3 {
+        font-family: Lato, Arial, sans-serif;
+        color: #eeeeee; }
+      .popUp > .prompt > .lastMatch h1, .popUp > .prompt > .lastMatch h2, .popUp > .prompt .nextMatch h1, .popUp > .prompt .nextMatch h2 {
+        font-style: italic;
+        font-weight: 900;
+        text-transform: uppercase; }
+    .popUp > .prompt > .lastMatch {
+      width: 80%;
+      padding: 0 10%; }
+    .popUp > .prompt > .nextMatch {
+      width: 90%;
+      padding: 0 5%;
+      background-color: rgba(255, 255, 255, 0.05); }
 
 .popUp:not(.yesNo) > .prompt > div > button {
   background: #51c24b no-repeat center url("/Images/check.png");
