--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -93,8 +93,7 @@ img                         { border: 0; }
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
-    min-height: 100%;
+    height: 100%;
     background-color: rgb(20,20,20);
     z-index: 9999;
     
@@ -277,6 +276,35 @@ img                         { border: 0; }
                     color: white;
                     transition: 0.4s, color 0.2s ease 0.4s;
                 }
+        }
+
+        > .lastMatch, .nextMatch {
+            position: relative;
+            float: left;
+            display: block;
+            height: auto;
+            top: 0;
+            left: 0;
+            clear: both;
+            margin: 0 !important;
+
+            h1, h2, h3 {
+                font-family: $font;
+                color: $off-white;
+            }
+
+            h1, h2 { font-style: italic; font-weight: 900; text-transform: uppercase; }
+        }
+
+        > .lastMatch {
+            width: 80%;
+            padding: 0 10%;
+        }
+
+        > .nextMatch {
+            width: 90%;
+            padding: 0 5%;
+            background-color: rgba(255,255,255,0.05);
         }
     }
 }
