--- a/Gobot/Gobot/Views/Stats/Schedule.cshtml
+++ b/Gobot/Gobot/Views/Stats/Schedule.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Horaire";
+    ViewBag.Desc = "Horaire des parties futures CS:GO à venir.";
+    ViewBag.Keywords = "Horaire, futur, à venir, liste parties, CS:GO, Counter-strike: Global offensive, Gobot";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Styles.Render("~/Content/Bet.min.css")
