--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -78,13 +78,13 @@
             @*<h4 class="grey">1 Gobot credit = 0.01$</h4>*@
         </div>
         <div>
-            <a href="@Url.Action("Index", "Bet")" id="trade">
+            <a href="@Url.Action("Ad", "Bet")" id="trade">
                 <h2>REGARDER UNE</h2>
                 <h3 class="grey">ANNONCE</h3>
             </a>
         </div>
         <div>
-            <a class="whiteLink" href="#" id="buy"><h2>ACHETER</h2></a>
+            <a class="whiteLink" href="@Url.Action("Ad", "Bet")" id="buy"><h2>ACHETER</h2></a>
         </div>
     </div>
 
@@ -117,7 +117,7 @@
                 <h1>0<grey> ACHETÉS</grey></h1>
             </div>*@
         <div>
-            <a href="#" class="darkBG">
+            <a href="@Url.Action("Ad", "Bet")" class="darkBG">
                 <h2>ACHETER DES CRÉDITS</h2>
                 <h3 class="grey">DE GOBOTTER</h3>
             </a>
