--- a/Gobot/Gobot/Content/Support.css
+++ b/Gobot/Gobot/Content/Support.css
@@ -297,6 +297,8 @@ img {
       font-size: 16px !important; } }
 
 h1 {
+  width: 80% !important;
+  padding: 0 10% !important;
   text-transform: uppercase;
   margin-top: 40px !important; }
   h1 > a {
@@ -320,4 +322,8 @@ p, ol, li {
 
 .info:last-of-type {
   margin-bottom: 45px; }
+
+@media screen and (min-width: 1326px) {
+  h1 {
+    line-height: 36px !important; } }
 
