--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -149,7 +149,7 @@
         if (getCookie("seenResults") == null)
             getMatchResults();
 
-        //createMatchResult_PopUp();
+        createMatchResult_PopUp();
     });
 
     $(window).on('resize', function () {
