Continued styling of .popUp. NEEDS WORK on smaller devices.

--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -122,18 +122,19 @@
         //var text = current + bet + next;
         var text = '\
             <div class="lastMatch">\
-                <div class="imgTeam"><img src=""/></div>\
-                <div><h1><green>Tism</green> A GAGNE CONTRE <red>Pirates in pyjamas</red></h1></div>\
-                <div class="imgTeam"><img src=""/></div>\
+                <div class="imgTeam"><img src="/Images/teams/tism.png"/></div>\
+                <div><h1><green>Tism (6)</green> À GAGNÉ CONTRE <red>Pirates in pyjamas (5)</red></h1>\
+                    <h2>Vous avez gagné <green>250GC</green> <grey>(8.78% de 2848GC)</grey></h2><h3 class="grey">Additionnellement, votre mise de départ de <offw>500GC</offw> vous à été remise.</h3>\
+                </div>\
+                <div class="imgTeam"><img src="/Images/teams/piratesinpyjamas.png"/></div>\
             </div>\
-            <div class="gain"><h2>Vous avez gagné <green>500GC</green>(17.56% de 2848GC)</h2><h3>Additionnellement, votre mise de départ de 500GC vous à été remise.</h3></div>\
             <div class="nextMatch">\
                   <div><h1 class="grey">PROCHAINE PARTIE</h1></div>\
                   <div>\
-                     <div class="imgTeam smallerImg"><img src="~/Images/teams/clown6.png"/></div>\
+                     <div class="imgTeam"><img src="/Images/teams/clown6.png"/></div>\
                      <div><h2>CLOWN6 <grey>VS</grey> PIRATES IN PYJAMAS</h2></div>\
-                     <div class="imgTeam smallerImg"><img src="~/Images/teams/piratesinpyjamas.png"/></div>\
-                     <div><h2><grey>DANS LA CARTE</grey> DE_COBBLESTONE</h2><img src="~/Images/de_cobblestone.png"/></div>\
+                     <div class="imgTeam"><img src="/Images/teams/piratesinpyjamas.png"/></div>\
+                     <div class="map"><h2><grey>DANS LA CARTE</grey> DE_COBBLESTONE</h2><img src="/Images/maps/de_cobblestone.png"/></div>\
                   </div>\
             </div>';
         popUp("", false, text, false);
