--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -249,7 +249,8 @@ img {
         color: transparent;
         direction: rtl;
         background-size: 30px !important;
-        height: 65px; }
+        height: 65px;
+        transition: background 0.4s; }
       .popUp > .prompt > div > button:hover {
         background-position-x: calc(100% - 30px) !important;
         color: white;
@@ -266,17 +267,79 @@ img {
       .popUp > .prompt > .lastMatch h1, .popUp > .prompt > .lastMatch h2, .popUp > .prompt > .lastMatch h3, .popUp > .prompt .nextMatch h1, .popUp > .prompt .nextMatch h2, .popUp > .prompt .nextMatch h3 {
         font-family: Lato, Arial, sans-serif;
         color: #eeeeee; }
-      .popUp > .prompt > .lastMatch h1, .popUp > .prompt > .lastMatch h2, .popUp > .prompt .nextMatch h1, .popUp > .prompt .nextMatch h2 {
-        font-style: italic;
+      .popUp > .prompt > .lastMatch > div, .popUp > .prompt .nextMatch > div {
+        float: left;
+        position: relative;
+        display: block; }
+      .popUp > .prompt > .lastMatch .header1, .popUp > .prompt > .lastMatch h1, .popUp > .prompt > .lastMatch .popUp > .prompt .nextMatch h1, .popUp > .prompt .nextMatch .popUp > .prompt > .lastMatch h1, .popUp > .prompt > .lastMatch h2, .popUp > .prompt > .lastMatch .popUp > .prompt .nextMatch h2, .popUp > .prompt .nextMatch .popUp > .prompt > .lastMatch h2, .popUp > .prompt .nextMatch .header1, .popUp > .prompt .nextMatch .popUp > .prompt > .lastMatch h1, .popUp > .prompt > .lastMatch .popUp > .prompt .nextMatch h1, .popUp > .prompt .nextMatch h1, .popUp > .prompt .nextMatch .popUp > .prompt > .lastMatch h2, .popUp > .prompt > .lastMatch .popUp > .prompt .nextMatch h2, .popUp > .prompt .nextMatch h2 {
         font-weight: 900;
         text-transform: uppercase; }
+      .popUp > .prompt > .lastMatch h1, .popUp > .prompt .nextMatch h1 {
+        font-style: italic;
+        font-size: 30px;
+        margin: 5px 0; }
+      .popUp > .prompt > .lastMatch h2, .popUp > .prompt .nextMatch h2 {
+        font-size: 22px;
+        font-weight: 400; }
+      .popUp > .prompt > .lastMatch h3, .popUp > .prompt .nextMatch h3 {
+        font-size: 16px;
+        font-weight: 400;
+        padding-bottom: 40px; }
+      .popUp > .prompt > .lastMatch .imgTeam > img, .popUp > .prompt .nextMatch .imgTeam > img {
+        display: block;
+        width: calc(100% - 16px);
+        height: calc(100% - 16px);
+        margin: 0 auto !important;
+        border-radius: 50%;
+        border: 8px solid rgba(255, 255, 255, 0.2); }
     .popUp > .prompt > .lastMatch {
-      width: 80%;
-      padding: 0 10%; }
+      width: auto; }
+      .popUp > .prompt > .lastMatch h2, .popUp > .prompt > .lastMatch h3 {
+        width: 100%;
+        margin: 0 0 2px 0;
+        text-align: center; }
+      .popUp > .prompt > .lastMatch > div:not(.imgTeam) {
+        margin: 0 30px; }
+      .popUp > .prompt > .lastMatch > .imgTeam {
+        width: 96px;
+        height: 96px; }
     .popUp > .prompt > .nextMatch {
-      width: 90%;
-      padding: 0 5%;
-      background-color: rgba(255, 255, 255, 0.05); }
+      width: 95%;
+      padding: 20px 0 30px 5%;
+      background-color: rgba(255, 255, 255, 0.07); }
+      .popUp > .prompt > .nextMatch h1 {
+        margin-bottom: 15px; }
+      .popUp > .prompt > .nextMatch h2 {
+        font-weight: 900;
+        font-style: italic;
+        margin: 0 20px;
+        height: 86px;
+        line-height: 86px; }
+      .popUp > .prompt > .nextMatch > div {
+        width: 100%; }
+        .popUp > .prompt > .nextMatch > div > div {
+          float: left;
+          position: relative;
+          display: block;
+          margin: 0 !important; }
+        .popUp > .prompt > .nextMatch > div > div:not(.imgTeam) {
+          width: auto !important; }
+        .popUp > .prompt > .nextMatch > div > .imgTeam {
+          width: 70px;
+          height: 70px; }
+          .popUp > .prompt > .nextMatch > div > .imgTeam > img {
+            border-width: 5px !important; }
+      .popUp > .prompt > .nextMatch .map {
+        float: right; }
+        .popUp > .prompt > .nextMatch .map > h2 {
+          float: left; }
+        .popUp > .prompt > .nextMatch .map > img {
+          position: relative;
+          float: left;
+          height: 86px;
+          right: 0;
+          -webkit-clip-path: polygon(0 0, 100% 0%, 100% 100%, 25% 100%);
+          clip-path: polygon(0 0, 100% 0%, 100% 100%, 25% 100%); }
 
 .popUp:not(.yesNo) > .prompt > div > button {
   background: #51c24b no-repeat center url("/Images/check.png");
