--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -270,6 +270,7 @@ img                         { border: 0; }
                 direction: rtl;
                 background-size: 30px !important;
                 height: 65px;
+                transition: background 0.4s;
             }
                 > button:hover {
                     background-position-x: calc(100% - 30px) !important;
@@ -277,6 +278,7 @@ img                         { border: 0; }
                     transition: 0.4s, color 0.2s ease 0.4s;
                 }
         }
+        
 
         > .lastMatch, .nextMatch {
             position: relative;
@@ -292,19 +294,79 @@ img                         { border: 0; }
                 font-family: $font;
                 color: $off-white;
             }
+            
+            > div {
+                float: left;
+                position: relative;
+                display: block;
+            }
+            
+            .header1 { font-weight: 900; text-transform: uppercase; }
+            h1 { @extend .header1; font-style: italic; font-size: 30px; margin: 5px 0; }
+            h2 { @extend .header1; font-size: 22px; font-weight: 400; }
+            h3 { font-size: 16px; font-weight: 400; padding-bottom: 40px; }
 
-            h1, h2 { font-style: italic; font-weight: 900; text-transform: uppercase; }
+            .imgTeam > img { 
+                display: block;
+                width: calc(100% - 16px);
+                height: calc(100% - 16px);
+                margin: 0 auto !important;
+                border-radius: 50%;
+                border: 8px solid rgba(255,255,255,0.2);
+            }
         }
 
         > .lastMatch {
-            width: 80%;
-            padding: 0 10%;
+            width: auto;
+
+            h2, h3 { width: 100%; margin: 0 0 2px 0; text-align: center; }
+
+            > div:not(.imgTeam) { margin: 0 30px; }
+            > .imgTeam { width: 96px; height: 96px; }
         }
 
         > .nextMatch {
-            width: 90%;
-            padding: 0 5%;
-            background-color: rgba(255,255,255,0.05);
+            width: 95%;
+            padding: 20px 0 30px 5%;
+            background-color: rgba(255,255,255,0.07);
+
+            h1 { margin-bottom: 15px; }
+            h2 { font-weight: 900; font-style: italic; margin: 0 20px; height: 86px; line-height: 86px; }
+
+            > div { 
+                width: 100%; 
+
+                > div {
+                    float: left;
+                    position: relative;
+                    display: block;
+                    margin: 0 !important;
+                }
+                    > div:not(.imgTeam) {
+                        width: auto !important;
+                    }
+
+                > .imgTeam {
+                    width: 70px;
+                    height: 70px;
+
+                    > img { border-width: 5px !important; }
+                }
+            }
+
+            .map {
+                float: right; 
+
+                > h2 { float: left; }
+                > img {
+                    position: relative;
+                    float: left;
+                    height: 86px;
+                    right: 0;
+                    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 100%, 25% 100%);
+                    clip-path: polygon(0 0, 100% 0%, 100% 100%, 25% 100%);
+                }
+            }
         }
     }
 }
