--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -41,7 +41,11 @@
             @{
                 if (Model.SteamID.Length > 0)
                 {
-                    <a href="http://www.steamcommunity.com/id/@Model.SteamID" target="_blank"><h4 class="grey">Visiter le profil steam.</h4></a>
+                    <a href="http://www.steamcommunity.com/id/@Model.SteamID" target="_blank"><h4 class="grey">Visiter le profil steam.</h4></a><h4 id="modSteamLink" class="grey">Modifier</h4>
+                }
+                else
+                {
+                    <h4 id="addSteamLink" class="grey">Ajouter un lien vers mon compte Steam.</h4>
                 }
             }
         </div>
@@ -178,6 +182,13 @@
             onResize();
             posRepBar(false);
         });
+        
+        $(document).on("click", "#modSteamLink", function() {
+            // TO DO: Create .popUp window to modify steam link
+        });
+        $(document).on("click", "#addSteamLink", function() {
+            // TO DO: Create .popUp window to add steam link
+        });
 
         $(document).on("click", "#options > div", function() {
             $("#options > div").not($(this)).each(function() {
@@ -234,7 +245,7 @@
 
         $(document).on("click", "#removeAccount", function() {
             popUp("Êtes-vous certains de vouloir supprimer votre compte? La suppression du compte est définitive. Toutes informations concernant votre compte seront supprimées, incluant vos crédits Gobot.", true);
-        
+
             $(document).on("click", "#confirmPrompt", function() {
                 deleteAccount();
             });
